added a theme switch

--- a/src/scss/colours.scss
+++ b/src/scss/colours.scss
@@ -19,3 +19,18 @@ $lDarkSwitchCol: #c8cfdc;
 $lInpBorderCol: #86afff;
 $lInpColour: #c6d9ff;
 // dark theme
+$dbgrCol: #252e48;
+$dShadow: #aeb0ba;
+$dBtnBgrAct: #ffffff;
+$dBtnBgr: #dde5f3;
+$dBtnTextAct: #252e48;
+$dlBtnText: #56607e;
+$dLiText: #ffffff;
+$dHeadTextAct: #ffffff;
+$dTextPas: #56607e;
+$dSwitchBgr: #131826;
+$dSwitchBtn: #ffffff;
+$dLightSwitchCol: #56607e;
+$dDarkSwitchCol: #ffffff;
+$dInpBorderCol: #ffffff;
+$dInpColour: #56607e;
