--- a/src/scss/mainContent.scss
+++ b/src/scss/mainContent.scss
@@ -51,7 +51,7 @@
             cursor: pointer;
             appearance: none;
             margin-right: 5px;
-            background: $bgrCol;
+            background: 0;
           }
           .list__checkbox:checked {
             background-color: $lLiText;
