--- a/css/style.css
+++ b/css/style.css
@@ -206,7 +206,7 @@
      -moz-appearance: none;
           appearance: none;
   margin-right: 5px;
-  background: #fff;
+  background: 0;
 }
 
 .side__wrapper .main .todo__list .todo__ul .list__el .list__checkbox:checked {
@@ -293,10 +293,132 @@
   opacity: 0;
 }
 
+body.dark {
+  background-color: #252e48;
+}
+
+body.dark .header .header__wrapepr .header__logo .greetings {
+  color: #ffffff;
+}
+
+body.dark .header .header__wrapepr .header__controls .lang select {
+  border: 0px solid #ffffff;
+  color: #ffffff;
+  background-color: #252e48;
+}
+
+body.dark .header .header__wrapepr .header__controls .lang option {
+  color: #ffffff;
+}
+
+body.dark .header .header__wrapepr .header__controls .themeSwitch .btnSwitch {
+  background-color: #ffffff;
+  color: #56607e;
+}
+
+body.dark .header .header__wrapepr .header__controls .themeSwitch .btnSwitch :hover {
+  -webkit-box-shadow: 4px 4px 8px -1px rgba(34, 60, 80, 0.2);
+          box-shadow: 4px 4px 8px -1px rgba(34, 60, 80, 0.2);
+}
+
+body.dark .line {
+  background: #ffffff;
+}
+
+body.dark .side__wrapper .main .main__wrapper .todo__input .input__form {
+  border: #ffffff 3px solid;
+  background-color: #fff;
+  color: #56607e;
+}
+
+body.dark .side__wrapper .main .main__wrapper .todo__input .input__btn {
+  color: #252e48;
+  background-color: #ffffff;
+}
+
+body.dark .side__wrapper .main .main__wrapper .todo__input .input__btn:hover {
+  -webkit-box-shadow: 4px 4px 8px -1px rgba(34, 60, 80, 0.2);
+          box-shadow: 4px 4px 8px -1px rgba(34, 60, 80, 0.2);
+}
+
+body.dark .side__wrapper .main .todo__list .todo__ul .list__el {
+  color: #ffffff;
+}
+
+body.dark .side__wrapper .main .todo__list .todo__ul .list__el .list__checkbox:checked {
+  background-color: #fff;
+}
+
+body.dark .side__wrapper .main .todo__list .todo__ul .list__el .work {
+  border: 2px solid #d7453a;
+}
+
+body.dark .side__wrapper .main .todo__list .todo__ul .list__el .personal {
+  border: 2px solid #5552b9;
+}
+
+body.dark .side__wrapper .main .todo__list .todo__ul .list__el .gross {
+  border: 2px solid #73bedf;
+}
+
+body.dark .side__wrapper .main .todo__list .todo__ul .list__el .list__bin .bin {
+  -webkit-filter: invert(1);
+          filter: invert(1);
+}
+
+body.dark .side__wrapper .main .todo__list .todo__ul .list__el :hover {
+  background-color: #eaeaea;
+}
+
+body.dark .popUp {
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+body.dark .message {
+  background-color: #fff;
+  border: 4px solid #d7453a;
+}
+
+body.dark .message .closeLine .closePopUpBtn {
+  color: #252e48;
+  background-color: #ffffff;
+}
+
+body.dark .message .closeLine .closePopUpBtn:hover {
+  -webkit-box-shadow: 4px 4px 8px -1px rgba(34, 60, 80, 0.2);
+          box-shadow: 4px 4px 8px -1px rgba(34, 60, 80, 0.2);
+}
+
+body.dark .message .message__text .message__msg {
+  color: #ffffff;
+}
+
+body.dark .side__wrapper .sideBar .sideBar__list .ul_li a {
+  color: #56607e;
+}
+
+body.dark .side__wrapper .sideBar .sideBar__list .ul_li.active a {
+  color: #ffffff;
+}
+
+body.dark .side__wrapper .vertLine {
+  background: #ffffff;
+}
+
 .hideBin {
   display: none;
 }
 
 .checked {
   text-decoration: line-through;
+}
+
+.BinDark {
+  -webkit-filter: invert(1);
+          filter: invert(1);
+}
+
+.bin {
+  -webkit-filter: invert(0);
+          filter: invert(0);
 }
