--- a/src/scss/colours.scss
+++ b/src/scss/colours.scss
@@ -3,7 +3,7 @@ $workColour: #d7453a;
 $PersonalColour: #5552b9;
 $GrossColour: #73bedf;
 // light theme
-$bgrCol: #fff;
+$bgrCol: #ebecef;
 $lShadow: #91bdff;
 $lBtnBgrAct: #8ab2ff;
 $lBtnBgr: #c6d9ff;
