added saving to localStorage, deleting from completed list

--- a/css/style.css
+++ b/css/style.css
@@ -185,6 +185,11 @@ body {
           box-shadow: 4px 4px 8px -1px rgba(34, 60, 80, 0.2);
 }
 
+.side__wrapper .main .todo__list {
+  min-width: 300px;
+  max-width: 600px;
+}
+
 .side__wrapper .main .todo__list .todo__ul {
   padding-left: 0;
 }
